--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rifat Hossan Badhon | CSE Student | Web Development & Cybersecurity Enthusiast</title>
+    <title>Rifat Hossan Badhon</title>
     <meta name="description"
         content="Portfolio of Rifat Hossan Badhon, a passionate CSE student skilled in web development and cybersecurity. Explore projects, skills, and social links.">
     <meta name="keywords"
@@ -696,5 +696,6 @@
     <script src="game.js"></script>
     <script src="animation.js"></script>
 </body>
+
 
 </html>
